Fix Margin and spacing for events menu

--- a/client/src/components/HomePage/HomePage.css
+++ b/client/src/components/HomePage/HomePage.css
@@ -14,7 +14,9 @@
     background-color: var(--ff-gray);
     height: 650px;
     width: 650px;
-    margin: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
     padding: 5px;
     border-radius: 20px;
     display: flex;
